<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ECF7F8">

    <ImageView
        android:id="@+id/image1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="190dp"/>

    <TextView
        android:id="@+id/tvDestinasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/destinasi"
        android:textColor="#000000"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/tvDeskripsi"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:text=""
        android:textColor="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recom_place"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/pandan"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pandaan Wangi"
                    android:textAlignment="center"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/padaang"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="89dp"
                    android:layout_height="wrap_content"
                    android:text="Padang"
                    android:gravity = "center"
                    android:textAlignment="center"
                    android:textColor="#000000" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <ImageView
                    android:id="@+id/sedapMalam"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/sedap"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Sedap Malam"
                    android:textColor="#000000"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <ImageView
                    android:id="@+id/image5"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/ampera"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/Ampera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Ampera"
                    android:textColor="#000000"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_title"
        android:textAlignment="center"
        android:textSize="12dp"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        android:layout_marginTop="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/kampung" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kampung Sawah"
                android:textColor="#000000"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/sunda" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Raja Sunda"
                android:textColor="#000000"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:visibility="gone"
        tools:visibility="invisible" />

</LinearLayout>