<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/grey">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@drawable/logonew"></ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register your account!"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        android:layout_marginTop="5dp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:paddingTop="28dp"
        android:background="@drawable/menu"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:elevation="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editName"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your name here"
            android:textSize="14sp"
            android:inputType="textPersonName">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editUsername"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your username here"
            android:textSize="14sp"
            android:inputType="textPersonName">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Location"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editLocation"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your location here"
            android:textSize="14sp">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editAge"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your age here"
            android:textSize="14sp"
            android:inputType="number">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editGender"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your gender here"
            android:textSize="14sp"
            android:inputType="">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editPhone"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:inputType="phone"
            android:digits="0123456789"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your phone number here"
            android:textSize="14sp">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editEmail"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:textColorHint="@color/grey"
            android:hint="type your email here"
            android:textSize="14sp"
            android:inputType="textEmailAddress">
        </com.jef.tripgeniusapp.customview.EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>
        <com.jef.tripgeniusapp.customview.EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            android:elevation="3dp"
            android:paddingLeft="10dp"
            android:background="@color/white"
            android:hint="type your password here"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:longClickable="false">
        </com.jef.tripgeniusapp.customview.EditText>
        <com.jef.tripgeniusapp.customview.RegisterButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:padding="14dp"
            android:textSize="19dp"
            android:backgroundTint="@color/dark_grey"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@drawable/menu">
        </com.jef.tripgeniusapp.customview.RegisterButton>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:visibility="gone"
        tools:visibility="invisible" />
</LinearLayout>
